tests/analyze/defer-no-operand/analyze.snap
---
source: tests/analyze.rs
expression: output
---
error: Expected an expression after `defer`.
> 2 | 	defer
       ^^^^^

